<resources>
    <string name="app_name">MyAndroidapp</string>
    <string name="already_have_an_account_n_signin">Already have an account? \n Signin</string>
    <string name="register">REGISTER</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="Email" />
    <string name="textview">TextView</string>
    <string name="email">Email</string>
    <string name="log_in">LOG_IN</string>
    <string name="login">LOG IN</string>
    <string name="already_have_an_account_signin">already have an account?signin</string>
</resources>