<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".SIGNUP">


    <TextView
        android:id="@+id/textViewlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/colorAccent"
        android:textSize="70sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewlogin"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:drawableRight="@drawable/ic"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginTop="98dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableRight="@drawable/ic_email"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_email" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginBottom="112dp"
        android:layout_marginTop="98dp"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_lock"
        android:drawableRight="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
 />

    <Button
        android:id="@+id/Textlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Password"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="35dp"
        android:background="#00BCD4"
        android:text="@string/log_in"
        android:textColor="#83848E"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>